crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__mismatching_target_selector.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_warnings(r#\"\n        [workspace]\n        name = \"test\"\n        channels = []\n        platforms = ['win-64']\n\n        [target.osx-64.dependencies]\n        \"#,)"
---
  ⚠ The target selector 'osx-64' does not match any of the platforms supported by the workspace
   ╭─[pixi.toml:7:17]
 4 │         channels = []
 5 │         platforms = ['win-64']
   ·                     ─────┬────
   ·                          ╰── the platforms supported by the workspace are defined here
 6 │
 7 │         [target.osx-64.dependencies]
   ·                 ───┬──
   ·                    ╰── target selector specified here
 8 │
   ╰────
  help: Add osx-64 to the supported platforms, using `pixi project platform add osx-64`
