crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__target_workspace_dependencies.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_warnings(r#\"\n        [workspace]\n        name = \"test\"\n        channels = []\n        platforms = ['osx-64']\n        preview = [\"pixi-build\"]\n\n        [package]\n\n        [package.build]\n        backend = { name = \"foobar\", version = \"*\" }\n\n        [target.osx-64.build-dependencies]\n        \"#,)"
---
  × When `pixi-build` is enabled, build-dependencies can only be specified for a package.
    ╭─[pixi.toml:13:9]
  5 │         platforms = ['osx-64']
  6 │         preview = ["pixi-build"]
    ·                     ─────┬────
    ·                          ╰── pixi-build is enabled here
  7 │
  8 │         [package]
  9 │
 10 │         [package.build]
 11 │         backend = { name = "foobar", version = "*" }
 12 │
 13 │         [target.osx-64.build-dependencies]
    ·         ─────────────────┬─────────────────
    ·                          ╰── build-dependencies specified here
 14 │
    ╰────
  help: Did you mean [package.target.osx-64.build-dependencies]?
