crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__tool_must_be_table.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        tool = false\n\n        [workspace]\n        channels = []\n        platforms = []\n        \"#,)"
---
  × expected a table, found boolean
   ╭─[pixi.toml:2:16]
 1 │
 2 │         tool = false
   ·                ─────
 3 │
   ╰────
